Refactor tests and simplify code
- Replaced `.get(0)` with `.getFirst()` in multiple test cases for better readability and consistency.
- Removed redundant and outdated test comments in `ExpressionParserTests`.
- Removed unused imports and exception in `Main.java` for cleaner code.
- Deleted commented-out legacy parsing logic in `Parser.java` for clarity.